--- a/qexam/MainWindow.ui
+++ b/qexam/MainWindow.ui
@@ -225,6 +225,19 @@
        <string>🗺️ Map View</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="btnFireDetection">
+      <property name="geometry">
+       <rect>
+        <x>920</x>
+        <y>590</y>
+        <width>200</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>🧯 Fire Detection</string>
+      </property>
+     </widget>
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
@@ -434,6 +447,44 @@
        <rect>
         <x>20</x>
         <y>740</y>
+        <width>160</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>← Back to List</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="firePage">
+     <widget class="QTableView" name="fireTableView">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>1100</width>
+        <height>500</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnMuteAlarm">
+      <property name="geometry">
+       <rect>
+        <x>1130</x>
+        <y>130</y>
+        <width>160</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>🔇 Mute</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnBackFire">
+      <property name="geometry">
+       <rect>
+        <x>1130</x>
+        <y>210</y>
         <width>160</width>
         <height>40</height>
        </rect>
